--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,6 @@ jobs:
         id: push
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: .
-          file: ../Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: callmevee/personal-website:latest
           labels: ${{ steps.meta.outputs.labels }}
