--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"tailwindcss": "3.4.14",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
+		"valibot": "^0.42.1",
 		"vite": "^5.0.3",
 		"vite-plugin-tailwind-purgecss": "0.3.3"
 	},
