--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/typography": "0.5.15",
 		"@types/eslint": "^9.6.0",
 		"@types/node": "22.8.6",
+		"@types/sanitize-html": "^2.13.0",
 		"autoprefixer": "10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
