--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"type": "module",
 	"dependencies": {
 		"highlight.js": "11.10.0",
+		"posthog-js": "^1.180.1",
 		"sanitize-html": "^2.13.1"
 	}
 }
