--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"@directus/sdk": "^18.0.0",
 		"@steeze-ui/heroicons": "^2.4.0",
+		"@steeze-ui/svelte-icon": "^1.5.0",
 		"highlight.js": "11.10.0",
 		"posthog-js": "^1.180.1",
 		"sanitize-html": "^2.13.1"
