--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@steeze-ui/heroicons": "^2.4.0",
 		"@steeze-ui/svelte-icon": "^1.5.0",
 		"highlight.js": "11.10.0",
+		"marked": "^15.0.0",
 		"posthog-js": "^1.180.1",
 		"sanitize-html": "^2.13.1"
 	}
