--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@directus/sdk": "^18.0.0",
 		"@steeze-ui/heroicons": "^2.4.2",
 		"@steeze-ui/svelte-icon": "^1.6.2",
+		"@types/jsdom": "^21.1.7",
 		"highlight.js": "11.10.0",
 		"marked": "^15.0.1",
 		"posthog-js": "^1.187.2",
