--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"jsdom": "^25.0.1",
 		"marked": "^15.0.1",
 		"posthog-js": "^1.187.2",
-		"sanitize-html": "^2.13.1"
+		"sanitize-html": "^2.13.1",
+		"slugify": "^1.6.6"
 	}
 }
